# bleve

./: BUILD.bazel  WORKSPACE  deps.bzl
analysis/: BUILD.bazel
analysis/analyzer/custom/: BUILD.bazel
analysis/analyzer/keyword/: BUILD.bazel
analysis/analyzer/simple/: BUILD.bazel
analysis/analyzer/standard/: BUILD.bazel
analysis/analyzer/web/: BUILD.bazel
analysis/char/asciifolding/: BUILD.bazel
analysis/char/html/: BUILD.bazel
analysis/char/regexp/: BUILD.bazel
analysis/char/zerowidthnonjoiner/: BUILD.bazel
analysis/datetime/flexible/: BUILD.bazel
analysis/datetime/optional/: BUILD.bazel
analysis/lang/ar/: BUILD.bazel
analysis/lang/bg/: BUILD.bazel
analysis/lang/ca/: BUILD.bazel
analysis/lang/cjk/: BUILD.bazel
analysis/lang/ckb/: BUILD.bazel
analysis/lang/cs/: BUILD.bazel
analysis/lang/da/: BUILD.bazel
analysis/lang/de/: BUILD.bazel
analysis/lang/el/: BUILD.bazel
analysis/lang/en/: BUILD.bazel
analysis/lang/es/: BUILD.bazel
analysis/lang/eu/: BUILD.bazel
analysis/lang/fa/: BUILD.bazel
analysis/lang/fi/: BUILD.bazel
analysis/lang/fr/: BUILD.bazel
analysis/lang/ga/: BUILD.bazel
analysis/lang/gl/: BUILD.bazel
analysis/lang/hi/: BUILD.bazel
analysis/lang/hr/: BUILD.bazel
analysis/lang/hu/: BUILD.bazel
analysis/lang/hy/: BUILD.bazel
analysis/lang/id/: BUILD.bazel
analysis/lang/in/: BUILD.bazel
analysis/lang/it/: BUILD.bazel
analysis/lang/nl/: BUILD.bazel
analysis/lang/no/: BUILD.bazel
analysis/lang/pt/: BUILD.bazel
analysis/lang/ro/: BUILD.bazel
analysis/lang/ru/: BUILD.bazel
analysis/lang/sv/: BUILD.bazel
analysis/lang/tr/: BUILD.bazel
analysis/token/apostrophe/: BUILD.bazel
analysis/token/camelcase/: BUILD.bazel
analysis/token/compound/: BUILD.bazel
analysis/token/edgengram/: BUILD.bazel
analysis/token/elision/: BUILD.bazel
analysis/token/hierarchy/: BUILD.bazel
analysis/token/keyword/: BUILD.bazel
analysis/token/length/: BUILD.bazel
analysis/token/lowercase/: BUILD.bazel
analysis/token/ngram/: BUILD.bazel
analysis/token/porter/: BUILD.bazel
analysis/token/reverse/: BUILD.bazel
analysis/token/shingle/: BUILD.bazel
analysis/token/snowball/: BUILD.bazel
analysis/token/stop/: BUILD.bazel
analysis/token/truncate/: BUILD.bazel
analysis/token/unicodenorm/: BUILD.bazel
analysis/token/unique/: BUILD.bazel
analysis/tokenizer/character/: BUILD.bazel
analysis/tokenizer/exception/: BUILD.bazel
analysis/tokenizer/letter/: BUILD.bazel
analysis/tokenizer/regexp/: BUILD.bazel
analysis/tokenizer/single/: BUILD.bazel
analysis/tokenizer/unicode/: BUILD.bazel
analysis/tokenizer/web/: BUILD.bazel
analysis/tokenizer/whitespace/: BUILD.bazel
analysis/tokenmap/: BUILD.bazel
cmd/bleve/: BUILD.bazel
cmd/bleve/cmd/: BUILD.bazel
cmd/bleve/cmd/scorch/: BUILD.bazel
config/: BUILD.bazel
document/: BUILD.bazel
geo/: BUILD.bazel
http/: BUILD.bazel
index/scorch/: BUILD.bazel
index/scorch/mergeplan/: BUILD.bazel
index/upsidedown/: BUILD.bazel
index/upsidedown/store/boltdb/: BUILD.bazel
index/upsidedown/store/goleveldb/: BUILD.bazel
index/upsidedown/store/gtreap/: BUILD.bazel
index/upsidedown/store/metrics/: BUILD.bazel
index/upsidedown/store/moss/: BUILD.bazel
index/upsidedown/store/null/: BUILD.bazel
mapping/: BUILD.bazel
numeric/: BUILD.bazel
registry/: BUILD.bazel
search/: BUILD.bazel
search/collector/: BUILD.bazel
search/facet/: BUILD.bazel
search/highlight/: BUILD.bazel
search/highlight/format/ansi/: BUILD.bazel
search/highlight/format/html/: BUILD.bazel
search/highlight/format/plain/: BUILD.bazel
search/highlight/fragmenter/simple/: BUILD.bazel
search/highlight/highlighter/ansi/: BUILD.bazel
search/highlight/highlighter/html/: BUILD.bazel
search/highlight/highlighter/simple/: BUILD.bazel
search/query/: BUILD.bazel
search/scorer/: BUILD.bazel
search/searcher/: BUILD.bazel
size/: BUILD.bazel
test/: BUILD.bazel
