load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/blevesearch/bleve/v2
gazelle(name = "gazelle")

go_library(
    name = "bleve",
    srcs = [
        "builder.go",
        "config.go",
        "config_disk.go",
        "doc.go",
        "error.go",
        "index.go",
        "index_alias.go",
        "index_alias_impl.go",
        "index_impl.go",
        "index_meta.go",
        "index_stats.go",
        "mapping.go",
        "query.go",
        "search.go",
    ],
    importpath = "github.com/blevesearch/bleve/v2",
    visibility = ["//visibility:public"],
    deps = [
        "//analysis",
        "//analysis/datetime/optional",
        "//document",
        "//index/scorch",
        "//index/upsidedown",
        "//index/upsidedown/store/boltdb",
        "//index/upsidedown/store/gtreap",
        "//mapping",
        "//registry",
        "//search",
        "//search/collector",
        "//search/facet",
        "//search/highlight",
        "//search/highlight/highlighter/html",
        "//search/query",
        "//size",
        "@com_github_blevesearch_bleve_index_api//:bleve_index_api",
    ],
)

go_test(
    name = "bleve_test",
    srcs = [
        "builder_test.go",
        "examples_test.go",
        "index_alias_impl_test.go",
        "index_meta_test.go",
        "index_test.go",
        "query_bench_test.go",
        "search_test.go",
    ],
    embed = [":bleve"],
    deps = [
        "//analysis",
        "//analysis/analyzer/custom",
        "//analysis/analyzer/keyword",
        "//analysis/analyzer/standard",
        "//analysis/char/html",
        "//analysis/char/regexp",
        "//analysis/token/length",
        "//analysis/token/lowercase",
        "//analysis/token/shingle",
        "//analysis/tokenizer/single",
        "//analysis/tokenizer/whitespace",
        "//document",
        "//geo",
        "//index/scorch",
        "//index/upsidedown",
        "//index/upsidedown/store/boltdb",
        "//index/upsidedown/store/null",
        "//mapping",
        "//numeric",
        "//search",
        "//search/highlight/highlighter/ansi",
        "//search/highlight/highlighter/html",
        "//search/query",
        "@com_github_blevesearch_bleve_index_api//:bleve_index_api",
    ],
)
