load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/blevesearch/bleve/v2/config",
    visibility = ["//visibility:public"],
    deps = [
        "//analysis/analyzer/custom",
        "//analysis/analyzer/keyword",
        "//analysis/analyzer/simple",
        "//analysis/analyzer/standard",
        "//analysis/analyzer/web",
        "//analysis/char/asciifolding",
        "//analysis/char/html",
        "//analysis/char/regexp",
        "//analysis/char/zerowidthnonjoiner",
        "//analysis/datetime/flexible",
        "//analysis/datetime/optional",
        "//analysis/lang/ar",
        "//analysis/lang/bg",
        "//analysis/lang/ca",
        "//analysis/lang/cjk",
        "//analysis/lang/ckb",
        "//analysis/lang/cs",
        "//analysis/lang/da",
        "//analysis/lang/de",
        "//analysis/lang/el",
        "//analysis/lang/en",
        "//analysis/lang/es",
        "//analysis/lang/eu",
        "//analysis/lang/fa",
        "//analysis/lang/fi",
        "//analysis/lang/fr",
        "//analysis/lang/ga",
        "//analysis/lang/gl",
        "//analysis/lang/hi",
        "//analysis/lang/hr",
        "//analysis/lang/hu",
        "//analysis/lang/hy",
        "//analysis/lang/id",
        "//analysis/lang/in",
        "//analysis/lang/it",
        "//analysis/lang/nl",
        "//analysis/lang/no",
        "//analysis/lang/pt",
        "//analysis/lang/ro",
        "//analysis/lang/ru",
        "//analysis/lang/sv",
        "//analysis/lang/tr",
        "//analysis/token/apostrophe",
        "//analysis/token/camelcase",
        "//analysis/token/compound",
        "//analysis/token/edgengram",
        "//analysis/token/elision",
        "//analysis/token/keyword",
        "//analysis/token/length",
        "//analysis/token/lowercase",
        "//analysis/token/ngram",
        "//analysis/token/reverse",
        "//analysis/token/shingle",
        "//analysis/token/stop",
        "//analysis/token/truncate",
        "//analysis/token/unicodenorm",
        "//analysis/token/unique",
        "//analysis/tokenizer/exception",
        "//analysis/tokenizer/regexp",
        "//analysis/tokenizer/single",
        "//analysis/tokenizer/unicode",
        "//analysis/tokenizer/web",
        "//analysis/tokenizer/whitespace",
        "//analysis/tokenmap",
        "//index/upsidedown",
        "//index/upsidedown/store/boltdb",
        "//index/upsidedown/store/goleveldb",
        "//index/upsidedown/store/gtreap",
        "//index/upsidedown/store/moss",
        "//search/highlight/format/ansi",
        "//search/highlight/format/html",
        "//search/highlight/fragmenter/simple",
        "//search/highlight/highlighter/ansi",
        "//search/highlight/highlighter/html",
        "//search/highlight/highlighter/simple",
    ],
)
