load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "registry",
    srcs = [
        "analyzer.go",
        "cache.go",
        "char_filter.go",
        "datetime_parser.go",
        "fragment_formatter.go",
        "fragmenter.go",
        "highlighter.go",
        "index_type.go",
        "registry.go",
        "store.go",
        "token_filter.go",
        "token_maps.go",
        "tokenizer.go",
    ],
    importpath = "github.com/blevesearch/bleve/v2/registry",
    visibility = ["//visibility:public"],
    deps = [
        "//analysis",
        "//search/highlight",
        "@com_github_blevesearch_bleve_index_api//:bleve_index_api",
        "@com_github_blevesearch_upsidedown_store_api//:upsidedown_store_api",
    ],
)
