load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "test",
    srcs = ["integration.go"],
    importpath = "github.com/blevesearch/bleve/v2/test",
    visibility = ["//visibility:public"],
    deps = ["//:bleve"],
)

go_test(
    name = "test_test",
    srcs = [
        "integration_test.go",
        "ip_field_test.go",
        "versus_score_test.go",
        "versus_test.go",
    ],
    embed = [":test"],
    deps = [
        "//:bleve",
        "//config",
        "//document",
        "//index/scorch",
        "//index/upsidedown",
        "//index/upsidedown/store/boltdb",
        "//mapping",
        "//search",
        "@com_github_blevesearch_bleve_index_api//:bleve_index_api",
    ],
)
