load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bleve_lib",
    srcs = ["main.go"],
    importpath = "github.com/blevesearch/bleve/v2/cmd/bleve",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/bleve/cmd",
        "//config",
    ],
)

go_binary(
    name = "bleve",
    embed = [":bleve_lib"],
    visibility = ["//visibility:public"],
)
