load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "scorch",
    srcs = [
        "builder.go",
        "empty.go",
        "event.go",
        "int.go",
        "introducer.go",
        "merge.go",
        "optimize.go",
        "persister.go",
        "regexp.go",
        "rollback.go",
        "scorch.go",
        "segment_plugin.go",
        "snapshot_index.go",
        "snapshot_index_dict.go",
        "snapshot_index_doc.go",
        "snapshot_index_tfr.go",
        "snapshot_segment.go",
        "stats.go",
        "unadorned.go",
    ],
    importpath = "github.com/blevesearch/bleve/v2/index/scorch",
    visibility = ["//visibility:public"],
    deps = [
        "//document",
        "//geo",
        "//index/scorch/mergeplan",
        "//registry",
        "//search",
        "//size",
        "@com_github_blevesearch_bleve_index_api//:bleve_index_api",
        "@com_github_blevesearch_scorch_segment_api_v2//:scorch_segment_api",
        "@com_github_blevesearch_vellum//:vellum",
        "@com_github_blevesearch_vellum//levenshtein",
        "@com_github_blevesearch_vellum//regexp",
        "@com_github_blevesearch_zapx_v11//:zapx",
        "@com_github_blevesearch_zapx_v12//:zapx",
        "@com_github_blevesearch_zapx_v13//:zapx",
        "@com_github_blevesearch_zapx_v14//:zapx",
        "@com_github_blevesearch_zapx_v15//:zapx",
        "@com_github_roaringbitmap_roaring//:roaring",
        "@io_etcd_go_bbolt//:bbolt",
    ],
)

go_test(
    name = "scorch_test",
    srcs = [
        "builder_test.go",
        "event_test.go",
        "field_dict_test.go",
        "int_test.go",
        "merge_test.go",
        "reader_test.go",
        "regexp_test.go",
        "rollback_test.go",
        "scorch_test.go",
    ],
    embed = [":scorch"],
    deps = [
        "//analysis",
        "//analysis/analyzer/keyword",
        "//analysis/analyzer/standard",
        "//analysis/tokenizer/regexp",
        "//document",
        "//index/scorch/mergeplan",
        "//mapping",
        "@com_github_blevesearch_bleve_index_api//:bleve_index_api",
    ],
)
