load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "upsidedown_proto",
    srcs = ["upsidedown.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "upsidedown_go_proto",
    importpath = "github.com/blevesearch/bleve/v2/index/upsidedown",
    proto = ":upsidedown_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "upsidedown",
    srcs = [
        "analysis.go",
        "dump.go",
        "field_cache.go",
        "field_dict.go",
        "index_reader.go",
        "reader.go",
        "row.go",
        "row_merge.go",
        "stats.go",
        "upsidedown.go",
    ],
    embed = [":upsidedown_go_proto"],
    importpath = "github.com/blevesearch/bleve/v2/index/upsidedown",
    visibility = ["//visibility:public"],
    deps = [
        "//document",
        "//registry",
        "//size",
        "@com_github_blevesearch_bleve_index_api//:bleve_index_api",
        "@com_github_blevesearch_upsidedown_store_api//:upsidedown_store_api",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "upsidedown_test",
    srcs = [
        "analysis_test.go",
        "benchmark_boltdb_test.go",
        "benchmark_common_test.go",
        "benchmark_gtreap_test.go",
        "benchmark_null_test.go",
        "dump_test.go",
        "field_dict_test.go",
        "reader_test.go",
        "row_merge_test.go",
        "row_test.go",
        "upsidedown_test.go",
    ],
    embed = [":upsidedown"],
    deps = [
        "//analysis",
        "//analysis/analyzer/standard",
        "//analysis/tokenizer/regexp",
        "//document",
        "//index/upsidedown/store/boltdb",
        "//index/upsidedown/store/gtreap",
        "//index/upsidedown/store/null",
        "//registry",
        "@com_github_blevesearch_bleve_index_api//:bleve_index_api",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
