load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "query",
    srcs = [
        "bool_field.go",
        "boolean.go",
        "boost.go",
        "conjunction.go",
        "date_range.go",
        "disjunction.go",
        "docid.go",
        "fuzzy.go",
        "geo_boundingbox.go",
        "geo_boundingpolygon.go",
        "geo_distance.go",
        "geo_shape.go",
        "ip_range.go",
        "match.go",
        "match_all.go",
        "match_none.go",
        "match_phrase.go",
        "multi_phrase.go",
        "numeric_range.go",
        "phrase.go",
        "prefix.go",
        "query.go",
        "query_string.go",
        "query_string.y.go",
        "query_string_lex.go",
        "query_string_parser.go",
        "regexp.go",
        "term.go",
        "term_range.go",
        "wildcard.go",
    ],
    importpath = "github.com/blevesearch/bleve/v2/search/query",
    visibility = ["//visibility:public"],
    deps = [
        "//analysis",
        "//analysis/datetime/optional",
        "//geo",
        "//mapping",
        "//numeric",
        "//registry",
        "//search",
        "//search/searcher",
        "@com_github_blevesearch_bleve_index_api//:bleve_index_api",
    ],
)

go_test(
    name = "query_test",
    srcs = [
        "date_range_test.go",
        "match_phrase_test.go",
        "query_string_lex_test.go",
        "query_string_parser_test.go",
        "query_test.go",
    ],
    embed = [":query"],
    deps = [
        "//analysis",
        "//geo",
        "//mapping",
    ],
)
