load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "searcher",
    srcs = [
        "ordered_searchers_list.go",
        "search_boolean.go",
        "search_conjunction.go",
        "search_disjunction.go",
        "search_disjunction_heap.go",
        "search_disjunction_slice.go",
        "search_docid.go",
        "search_filter.go",
        "search_fuzzy.go",
        "search_geoboundingbox.go",
        "search_geopointdistance.go",
        "search_geopolygon.go",
        "search_geoshape.go",
        "search_ip_range.go",
        "search_match_all.go",
        "search_match_none.go",
        "search_multi_term.go",
        "search_numeric_range.go",
        "search_phrase.go",
        "search_regexp.go",
        "search_term.go",
        "search_term_prefix.go",
        "search_term_range.go",
    ],
    importpath = "github.com/blevesearch/bleve/v2/search/searcher",
    visibility = ["//visibility:public"],
    deps = [
        "//document",
        "//geo",
        "//numeric",
        "//search",
        "//search/scorer",
        "//size",
        "@com_github_blevesearch_bleve_index_api//:bleve_index_api",
        "@com_github_blevesearch_geo//geojson",
    ],
)

go_test(
    name = "searcher_test",
    srcs = [
        "base_test.go",
        "geoshape_contains_test.go",
        "geoshape_intersects_test.go",
        "geoshape_within_test.go",
        "search_boolean_test.go",
        "search_conjunction_test.go",
        "search_disjunction_test.go",
        "search_docid_test.go",
        "search_fuzzy_test.go",
        "search_geoboundingbox_test.go",
        "search_geopointdistance_test.go",
        "search_geopolygon_test.go",
        "search_geoshape_circle_test.go",
        "search_geoshape_envelope_test.go",
        "search_geoshape_geometrycollection_test.go",
        "search_geoshape_linestring_test.go",
        "search_geoshape_points_test.go",
        "search_geoshape_polygon_test.go",
        "search_ip_range_test.go",
        "search_match_all_test.go",
        "search_match_none_test.go",
        "search_numeric_range_test.go",
        "search_phrase_test.go",
        "search_regexp_test.go",
        "search_term_range_test.go",
        "search_term_test.go",
    ],
    embed = [":searcher"],
    deps = [
        "//analysis",
        "//analysis/tokenizer/regexp",
        "//document",
        "//geo",
        "//index/scorch",
        "//index/upsidedown",
        "//index/upsidedown/store/gtreap",
        "//numeric",
        "//search",
        "@com_github_blevesearch_bleve_index_api//:bleve_index_api",
    ],
)
