load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "keyword",
    srcs = ["keyword.go"],
    importpath = "github.com/blevesearch/bleve/v2/analysis/analyzer/keyword",
    visibility = ["//visibility:public"],
    deps = [
        "//analysis",
        "//analysis/tokenizer/single",
        "//registry",
    ],
)
