load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "standard",
    srcs = ["standard.go"],
    importpath = "github.com/blevesearch/bleve/v2/analysis/analyzer/standard",
    visibility = ["//visibility:public"],
    deps = [
        "//analysis",
        "//analysis/lang/en",
        "//analysis/token/lowercase",
        "//analysis/tokenizer/unicode",
        "//registry",
    ],
)
