load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "regexp",
    srcs = ["regexp.go"],
    importpath = "github.com/blevesearch/bleve/v2/analysis/char/regexp",
    visibility = ["//visibility:public"],
    deps = [
        "//analysis",
        "//registry",
    ],
)

go_test(
    name = "regexp_test",
    srcs = ["regexp_test.go"],
    embed = [":regexp"],
)
