load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bg",
    srcs = [
        "stop_filter_bg.go",
        "stop_words_bg.go",
    ],
    importpath = "github.com/blevesearch/bleve/v2/analysis/lang/bg",
    visibility = ["//visibility:public"],
    deps = [
        "//analysis",
        "//analysis/token/stop",
        "//registry",
    ],
)
